force-app/main/default/objects/blng__BillingTreatment__c/blng__BillingTreatment__c.object-meta.xml
<CustomObject>
    <label>Billing Treatment</label>
    <nameField>
        <label>Billing Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>