force-app/main/default/objects/blng__BillingTreatment__c/fields/blng__BillingLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingLegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__LegalEntity__c.blng__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Billing Treatments</relationshipLabel>
    <relationshipName>BillingLegalEntityBillingTreatments</relationshipName>
    <type>Lookup</type>
</CustomField>