force-app/main/default/objects/blng__BillingTreatment__c/fields/blng__CancellationInvoicePlan__c.field-meta.xml
<CustomField>
    <fullName>blng__CancellationInvoicePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Invoice Plan</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Billing Treatments (Cancellation Invoice Plan)</relationshipLabel>
    <relationshipName>Billing_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>