force-app/main/default/objects/blng__BillingTreatment__c/fields/blng__CancellationRule__c.field-meta.xml
<CustomField>
    <fullName>blng__CancellationRule__c</fullName>
    <label>Cancellation Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CancellationRule</valueSetName>
    </valueSet>
</CustomField>